fix(staffVisual): adjust illustration and fix svg on ie11

--- a/src/components/staffVisual/staffVisual.module.scss
+++ b/src/components/staffVisual/staffVisual.module.scss
@@ -21,6 +21,8 @@
 
     @include breakpointBig {
         display: block;
+        width: 40%;
+        height: 400px;
     }
 }
 
